--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,10 +2,12 @@
     <string name="app_name">ProjectKotlin</string>
     <string name="login">login</string>
     <string name="addFrag">Add Fragment</string>
-    <string name="listFrag">List Fragment</string>
+    <string name="listFrag">Wiki Fragment</string>
     <string name="task">Task</string>
     <string name="add">Add</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="functions">Functions</string>
+    <string name="hint_search_string">Enter search Text</string>
+    <string name="button_search">Check search count</string>
 </resources>
