--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="functions">Functions</string>
     <string name="hint_search_string">Enter search Text</string>
     <string name="button_search">Check search count</string>
+    <string name="wiki_search_results_found">%1$d result found</string>
 </resources>
