--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,13 +1,13 @@
 <resources>
     <string name="app_name">ProjectKotlin</string>
     <string name="login">login</string>
-    <string name="addFrag">Add Fragment</string>
-    <string name="listFrag">Wiki Fragment</string>
+    <string name="addFrag">Example Funcitons</string>
+    <string name="listFrag">Wiki Search</string>
     <string name="task">Task</string>
     <string name="add">Add</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="functions">Functions</string>
+    <string name="wiki">Wiki</string>
     <string name="hint_search_string">Enter search Text</string>
     <string name="button_search">Check search count</string>
     <string name="wiki_search_results_found">%1$d result found</string>
